syntax = "proto3";

option go_package = "./keys";

package keys;

service KeysGreeter {
    rpc UploadKeys(FileUploadRequest) returns (FileUploadResponse);
    rpc DownloadKeys(Empty) returns (stream FileDownloadResponse);
}

message FileUploadRequest {
    bytes chunk = 2;
}

message FileUploadResponse {
    string message = 1;
}

message Empty {}

message FileDownloadResponse {
    bytes chunk = 1;
}